增加GraphQL基于.graphqls文件的查询

--- a/use-agent-demo/pom.xml
+++ b/use-agent-demo/pom.xml
@@ -13,6 +13,14 @@
     <name>use-agent-demo</name>
 
     <dependencies>
+        <dependency>
+            <groupId>com.graphql-java</groupId>
+            <artifactId>graphql-java</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
