--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,17 @@
 				<version>2.8.6</version>
 			</dependency>
 
+			<dependency>
+				<groupId>com.graphql-java</groupId>
+				<artifactId>graphql-java</artifactId>
+				<version>15.0</version>
+			</dependency>
+			<dependency>
+				<groupId>commons-io</groupId>
+				<artifactId>commons-io</artifactId>
+				<version>2.6</version>
+			</dependency>
+
 		</dependencies>
 	</dependencyManagement>
 
