--- a/pom.xml
+++ b/pom.xml
@@ -61,7 +61,24 @@
 			<dependency>
 				<groupId>com.graphql-java</groupId>
 				<artifactId>graphql-java</artifactId>
-				<version>15.0</version>
+				<version>14.0</version>
+			</dependency>
+			<dependency>
+				<groupId>com.graphql-java-kickstart</groupId>
+				<artifactId>graphql-java-tools</artifactId>
+				<version>6.0.2</version>
+			</dependency>
+			<dependency>
+				<groupId>com.graphql-java-kickstart</groupId>
+				<artifactId>graphql-spring-boot-starter</artifactId>
+				<version>7.0.1</version>
+			</dependency>
+			<!-- 可视化调试工具 -->
+			<!-- http://localhost:8080/graphiql -->
+			<dependency>
+				<groupId>com.graphql-java-kickstart</groupId>
+				<artifactId>graphiql-spring-boot-starter</artifactId>
+				<version>7.0.1</version>
 			</dependency>
 			<dependency>
 				<groupId>commons-io</groupId>
