--- a/pom.xml
+++ b/pom.xml
@@ -9,12 +9,11 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.qiusheng.agent</groupId>
-	<artifactId>agent</artifactId>
+	<artifactId>springboot-agent</artifactId>
 	<version>1.0.0</version>
 	<packaging>pom</packaging>
 
 	<modules>
-		<module>custom-agent</module>
 		<module>use-agent-demo</module>
 	</modules>
 
