基于byte-buddy字节码增强的简化版探针

--- a/use-provider/src/main/resources/bootstrap.yml
+++ b/use-provider/src/main/resources/bootstrap.yml
@@ -7,6 +7,8 @@ spring:
   cloud:
     nacos:
       server-addr: 172.18.8.101:8848
+      discovery:
+        ip: 172.18.3.146      #服务器上ip
       config:
         file-extension: yaml
     sentinel:
