--- a/use-agent-web/src/main/resources/bootstrap.yml
+++ b/use-agent-web/src/main/resources/bootstrap.yml
@@ -7,12 +7,16 @@ spring:
   cloud:
     nacos:
       server-addr: 172.18.8.101:8848
+      discovery:
+        ip: 172.18.3.146      #服务器上ip
       config:
         file-extension: yaml
     sentinel:
+      eager: true #关闭懒加载
+      filter:
+        enabled: false
       transport:
-        port: 8719
-        dashboard: 127.0.0.1:8858
+        dashboard: 127.0.0.1:18000
   jackson:
     date-format: yyyy-MM-dd HH:mm:ss
     time-zone: GMT+8
@@ -28,3 +32,22 @@ spring:
         max-wait: 1000ms     # 连接池最大阻塞等待时间,单位毫秒（使用负值表示没有限制） 默认 -1
         min-idle: 0          # 连接池中的最小空闲连接 默认 0
       shutdown-timeout: 100ms
+
+feign:
+  okhttp:
+    enabled: true
+  httpclient:
+    max-connections: 1000
+    max-connections-per-route: 200
+  compression:
+    request:
+      enabled: true
+      mime-types: text/xml,application/xml,application/json
+      min-request-size: 2048
+    response:
+      enabled: true
+  sentinel:
+    enabled: true   #启用sentinel
+  hystrix:
+    enabled: false  #关闭自带的hystrix
+
